# gitmirrorcache

./: .dockerignore  .gitignore  AGENTS.md  AUTH-PLAN.md  Cargo.toml  DIRECT-GIT-COLD-PATH-PLAN.md  Dockerfile  Dockerfile.cross  Dockerfile.prebuilt  EXACT-COMMIT-MATERIALIZE-HYDRATION-PLAN.md  FIX-FOR-SLOW-LLVM-CLONE.md  LICENSE  LICENSE-MIT  README.md  REVISED-AUTH-OPTIMIZATION-PLAN.md  TODO.md  TODOs.md  docker-compose.fake-gcs.yml  docker-compose.minio.yml  docker-integration.md  git-api-plan.md  git_fetch_cache_handoff.md  implementation-notes.md  incremental-generations-plan.md  plan.md  wrangler.jsonc
.agents/skills/deploy-cloudflare-frontdoor/: SKILL.md
.agents/skills/deploy-cloudflare-frontdoor/agents/: openai.yaml
.agents/skills/testing-git-cache-runtime/: SKILL.md
.agents/skills/testing-git-remote/: SKILL.md
.devin/skills/gitmirrorcache-deploy/: SKILL.md
.github/workflows/: actions-artifact-cleanup.yml  actions-cache-cleanup.yml  docker-publish.yml  helm.yml  integration-tests.yml  lint.yml  preview-stack.yml  unit-tests.yml
config/: local.example.toml  minio.example.toml  production.example.toml
crates/git-cache-api/: Cargo.toml
crates/git-cache-api/src/: lib.rs  main.rs  tests.rs
crates/git-cache-api/tests/: contention.rs  contention_advanced.rs  correctness.rs  git_client_advanced.rs  git_client_contract.rs  git_protocol.rs  git_remote_integration.rs  git_session_protocol.rs  load.rs  performance.rs  performance_advanced.rs  protocol_v2_integration.rs  runtime_cache_recovery.rs
crates/git-cache-api/tests/support/: mod.rs
crates/git-cache-cli/: Cargo.toml
crates/git-cache-cli/src/: main.rs
crates/git-cache-core/: Cargo.toml
crates/git-cache-core/src/: auth.rs  config.rs  error.rs  lib.rs  manifest.rs  repo.rs  selector.rs  session.rs  tests.rs  update.rs
crates/git-cache-core/src/auth/: tests.rs
crates/git-cache-core/src/config/: tests.rs
crates/git-cache-core/src/repo/: tests.rs
crates/git-cache-core/src/selector/: tests.rs
crates/git-cache-core/tests/: correctness.rs
crates/git-cache-disk/: Cargo.toml
crates/git-cache-disk/src/: async_disk.rs  lib.rs  tests.rs
crates/git-cache-disk/src/async_disk/: tests.rs
crates/git-cache-disk/tests/: contention.rs  contention_advanced.rs  fuzz_stress.rs  load.rs  performance.rs  performance_advanced.rs
crates/git-cache-domain/: Cargo.toml
crates/git-cache-domain/src/: lib.rs  materializer.rs  state.rs
crates/git-cache-domain/src/materializer/: access.rs  direct_git.rs  executor.rs  generations.rs  manifests.rs  planning.rs  protocol_v2.rs  proxy_tee.rs  repo.rs  sessions.rs  util.rs
crates/git-cache-domain/src/materializer/proxy_tee/: tests.rs
crates/git-cache-domain/src/materializer/tests/: contention_tests.rs  direct_git_tests.rs  generation_tests.rs  key_path_tests.rs  minio_tests.rs  mod.rs  performance_tests.rs  selector_tests.rs  session_tests.rs
crates/git-cache-domain/src/state/: tests.rs
crates/git-cache-fuzz/: Cargo.toml
crates/git-cache-fuzz/src/: lib.rs
crates/git-cache-fuzz/tests/: coordinator_fuzz.rs  disk_fuzz.rs  materializer_fuzz.rs
crates/git-cache-git/: Cargo.toml
crates/git-cache-git/src/: backend.rs  gix_backend.rs  lib.rs  tests.rs
crates/git-cache-git/tests/: contract.rs  git_wrapper.rs  load.rs  performance.rs  performance_advanced.rs  sanitization.rs
crates/git-cache-git/tests/common/: mod.rs
crates/git-cache-objectstore/: Cargo.toml
crates/git-cache-objectstore/src/: gcs.rs  lib.rs  local.rs  manifests.rs  s3.rs  tests.rs
crates/git-cache-objectstore/src/s3/: tests.rs
crates/git-cache-objectstore/tests/: contention.rs  contention_advanced.rs  correctness.rs  load.rs  performance.rs  performance_advanced.rs
crates/git-cache-pg/: Cargo.toml
crates/git-cache-pg/migrations/: 001_create_repo_leases.sql
crates/git-cache-pg/src/: lib.rs
crates/git-cache-worker/: Cargo.toml
crates/git-cache-worker/src/: lib.rs  tests.rs
crates/git-cache-worker/tests/: contention.rs
deploy/helm/gitmirrorcache/: Chart.yaml  README.md  values.yaml
deploy/helm/gitmirrorcache/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  (+6 more)
docs/: bundle-uri-plan.md  chaos-tests.md  clean-slate-design.md  cold-read-through-performance.md  deployment.md  local-dev.md  massive-repo-performance-plan.md  multi-worker-conflict-plan.md  readme-fact-check-audit.md  serving-maintenance-cost.md
integration_tests/: README.md  aws-dev-git-matrix-findings.md  test_astral_uv.py  test_aws_dev_git_matrix.py  test_git_remote_public.py  test_lfs_preview_matrix.py  test_lfs_smoke.py
python/: README.md
python/aws/: api_runtime_diagnostics_ssm_command.py  api_task_definition.py  check_vcpu_quota.py  compaction_events_policy.py  compaction_targets.py  compaction_task_definition.py  destroy_preview_listener_rule.py  ecr_lifecycle_policy.py  ecs_host_diagnostics_ssm_command.py  ecs_s3_policy.py  ecs_secrets_policy.py  ecs_service_payloads.py  ecs_service_rollout_status.py  find_listener_rule_arn.py  optimize_cache_repo_ssm_command.py  pick_listener_rule_priority.py  preview_manifest.py  remove_cache_repo_ssm_command.py  shared_listener_default_action.py  shared_listener_rule_payloads.py  ssm_command.py  stop_stale_ecs_container_ssm_command.py
python/github/: artifact_is_older_than.py  cache_is_older_than.py
scripts/aws/: api-runtime-diagnostics.sh  bootstrap.sh  build-image-cross.sh  cache-repo-integrity.sh  common.sh  deploy-and-smoke.sh  deploy-ecs-ec2-ebs.sh  deploy-preview.sh  deploy-prod.sh  destroy-preview.sh  devbox.sh  ecs-host-diagnostics.sh  migrate-ecs-host-al2023.sh  optimize-cache-repo.sh  preview-common.sh  remove-cache-repo.sh  smoke-test.sh  ssh-devbox.sh  stop-stale-ecs-container.sh  test-prod-linux-cache-depths.sh
scripts/aws/ssm/: api-runtime-diagnostics.sh  cache-repo-integrity.sh  ecs-host-diagnostics.sh  optimize-cache-repo.sh  remove-cache-repo.sh  stop-stale-ecs-container.sh
scripts/cloudflare/: deploy-static-site.sh  upsert-alb-cname.sh
scripts/github/: cleanup-actions-artifacts.sh  cleanup-actions-caches.sh
site/: index.html  worker.js
