[workspace]
members = [
    "crates/git-cache-api",
    "crates/git-cache-cli",
    "crates/git-cache-core",
    "crates/git-cache-disk",
    "crates/git-cache-domain",
    "crates/git-cache-git",
    "crates/git-cache-objectstore",
    "crates/git-cache-worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/git-cache"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
base64 = "0.22"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
futures = "0.3"
http = "1.3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
aws-credential-types = "1.2.14"
aws-types = "1.3.15"
