[package]
name = "git-cache-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
git-cache-core = { path = "../git-cache-core" }
git-cache-domain = { path = "../git-cache-domain" }
git-cache-git = { path = "../git-cache-git" }
git-cache-worker = { path = "../git-cache-worker" }
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
s3 = ["git-cache-domain/s3"]

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
