[package]
name = "git-cache-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "git-cache"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
git-cache-core = { path = "../git-cache-core" }
git-cache-disk = { path = "../git-cache-disk" }
git-cache-domain = { path = "../git-cache-domain" }
git-cache-objectstore = { path = "../git-cache-objectstore" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
s3 = ["git-cache-domain/s3"]
gcs = ["git-cache-domain/gcs"]
