[package]
name = "git-cache-disk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
git-cache-core = { path = "../git-cache-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
