[package]
name = "git-cache-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
git-cache-core = { path = "../git-cache-core" }
git-cache-disk = { path = "../git-cache-disk" }
git-cache-git = { path = "../git-cache-git" }
git-cache-objectstore = { path = "../git-cache-objectstore" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
