[package]
name = "git-cache-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
git-cache-core = { path = "../git-cache-core" }
git-cache-disk = { path = "../git-cache-disk" }
git-cache-git = { path = "../git-cache-git" }
git-cache-objectstore = { path = "../git-cache-objectstore" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
default = []
s3-tests = ["git-cache-objectstore/s3"]

[dev-dependencies]
aws-credential-types.workspace = true
aws-sdk-s3 = "1"
aws-types.workspace = true
tempfile.workspace = true
