[package]
name = "git-cache-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aws-config = { version = "1", optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-types = { workspace = true, optional = true }
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
git-cache-core = { path = "../git-cache-core" }
git-cache-disk = { path = "../git-cache-disk" }
git-cache-git = { path = "../git-cache-git" }
git-cache-objectstore = { path = "../git-cache-objectstore" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-credential-types", "dep:aws-sdk-s3", "dep:aws-types", "git-cache-objectstore/s3"]
s3-tests = ["s3"]

[dev-dependencies]
tempfile.workspace = true
