[package]
name = "git-cache-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
git-cache-core = { path = "../git-cache-core" }
gix.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tracing.workspace = true
