[package]
name = "git-cache-objectstore"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
git-cache-core = { path = "../git-cache-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
aws-sdk-s3 = { version = "1", optional = true }
aws-smithy-runtime-api = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }
gcloud-storage = { version = "1.3.0", optional = true }
futures = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

[features]
default = []
s3 = ["dep:aws-sdk-s3", "dep:aws-smithy-runtime-api", "dep:aws-smithy-types"]
gcs = ["dep:gcloud-storage", "dep:futures", "dep:tokio-util"]

[dev-dependencies]
aws-credential-types.workspace = true
aws-types.workspace = true
futures.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
uuid.workspace = true
