[package]
name = "git-cache-pg"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
git-cache-core = { path = "../git-cache-core" }
git-cache-worker = { path = "../git-cache-worker" }
sqlx = { workspace = true }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
