[package]
name = "git-cache-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
git-cache-core = { path = "../git-cache-core" }
serde.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
futures.workspace = true
git-cache-core = { path = "../git-cache-core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
