[package]
name = "git-cache-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
git-cache-core = { path = "../git-cache-core" }
git-cache-objectstore = { path = "../git-cache-objectstore" }
serde.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
